Improve Collapse component and correct content.

--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -1,54 +1,15 @@
+/* COLLAPSE CONTAINER */
 .collapse-container {
 	position: relative;
+	height: 0px;
+	margin: 0 0 50px 0;
 }
 
-.collapse-hide {
-	animation-name: collapseOut;
-	animation-duration: 1s;
-  	animation-fill-mode: forwards;
-}
-.collapse-show {
-	animation-name: collapseIn;
-	animation-duration: 1s;
-  	animation-fill-mode: forwards;
-}
-@keyframes collapseIn {
-	0%{
-	    display: none;
-	    height: 0px;
-	    opacity: 0;
-	    transform: translateX(-1000px);
-	}
-	50%{
-	    opacity: 0.5;
-	}
-	100%{
-	    display: inline;
-	    height: 100%;
-	    opacity: 1;
-	    transform: translateX(0px);
-	}
+.collapse-container.active {
+	height: 100%;
 }
 
-@keyframes collapseOut {
-	0%{
-	    display: inline;
-	    opacity: 1;
-	    height: 100%;
-	    transform: translateX(0px);
-	}
-	50%{
-	    opacity: 0.5;
-	}
-	100%{
-	    display: none;
-	    height: 0px;
-	    opacity: 0;
-	    visibility: hidden;
-	    transform: translateX(-1000px);
-	}
-}
-
+/* BTN */
 .clickable {
 	cursor: pointer;
 	border: 1px solid #265d63;
@@ -62,6 +23,7 @@
 	margin: 50px 0 0 10px;
 	line-height: 30px;
 	font-weight: bold;
+	z-index: 10;
 }
 .clickable:hover {
 	border: 1px solid #34b8c8;
@@ -113,7 +75,8 @@
 	    transform: translateX(0px);
 	}
 }
-/* EXIT COLLAPSE BTN */
+
+/* CROSS BTN STYLE ACIVE */
 .collapse-btn .btn-line {
   width: 40px;
   height: 2px;
@@ -123,6 +86,7 @@
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+  z-index: 0;
 }
 
 .collapse-btn.is-active:hover,
@@ -130,7 +94,7 @@
   cursor: pointer;
 }
 
-/* NINE */
+/* CROSS BTN STYLE */
 
 .collapse-btn-cross {
   opacity: 0;
@@ -194,6 +158,23 @@
   transform: translateY(-13px) rotate(90deg);
 }
 
+/* MOTION CONTENT */
+.collapse-hide {
+	background-color: #FFF;
+	transform: scale(0, 0);
+    transform-origin: 0 50%;
+    transition: transform 1s ease;
+	z-index: 20;
+    height: 0px;
+}
+.collapse-show {
+    transform: scale(1, 1);
+    display: inline-block;
+    height: 100%;
+    transition: transform 1s ease;
+}
+
+/* CROSS BROWSER COMPATIBILITY */
 @media screen and (min-width: 801px) {
 	.clickable {
 		font-size: 20px;
@@ -201,3 +182,4 @@
 		margin: 100px 0 0 50px;
 	}
 }
+
