--- a/src/index.css
+++ b/src/index.css
@@ -83,9 +83,8 @@ h3 {
 }
 
 h4 {
-	font-size: 20px; 
-	padding: 100px 0 0 0;
-	text-align: center;
+	font-size: 25px;
+	padding: 100px 0 30px 0;
 }
 
 small {
